# aceai-cli

./: Cargo.toml  app-conf.yml  docker_services.json  log4rs.yaml  readme.md
src/: main.rs
src/lib/: cmd.rs  cmd_deploy.rs  cmd_deploy_service.rs  cmd_deploy_web.rs  cmd_ssh.rs  conf.rs  docker_compose_parser.rs  mod.rs  nacos_client.rs  ssh_client.rs  zuul_client.rs
