[package]
name = "aceai-dp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
clap = { version = "4.0.15", features = ["cargo"] }
reqwest = { git = "https://github.com/baimeidaxia/reqwest", version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
ssh-rs = { version = "0.2.1" }